--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "input.js",
   "scripts": {
-    "dev-server": "webpack-dev-server --mode development",
+    "dev-server": "webpack-dev-server --mode production",
     "build": "webpack --mode production"
   },
   "author": "",
